# dexter

./: .gitignore  README.md  package.json  pyproject.toml
ai_docs/: benchmark.json  initial_architecture.md  tech_spec_v0_1.md  wakeword_wasm_architecture_v1.md  wakeword_wasm_brainstorming.md
ai_docs/tool_use/: google_tool_integration.md  lfm2-24b-a2b.md  text-generation-and-prompting.md  tool-use.md
api/: __init__.py  config.py  main.py
api/models/: session_state.py
api/routes/: health.py  socket_events.py
api/services/: assistant_orchestrator.py  audio_codec.py  calculator_tool.py  liquid_tool_runner.py  llm_service.py  stt_service.py  tool_runtime.py  tts_service.py
frontend/: app.js  audio_capture.js  index.html  socket_client.js  style.css  wakeword_openwakeword_adapter.js
frontend/wakeword/: audio-worklet-processor.js  audio_capture_controller.js  inference_worker.js  openwakeword_core.js  wakeword_openwakeword_adapter.js
frontend/wakeword/tests/: openwakeword_core.test.mjs  wakeword_golden_pcm16.json
models/wakewords/: dexter.onnx  dexter_abort.onnx  dexter_start.onnx  dexter_stop.onnx
scripts/: export_wakeword_golden_pcm16.py  openwakeword_mic_sanity.py  openwakeword_wav_benchmark_temp.py  run_local_backend.sh  run_local_frontend.sh
tests/unit/api/services/: test_calculator_tool.py  test_liquid_tool_runner.py  test_tool_runtime.py
