[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dexter-local-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "flask-socketio>=5.3",
  "gunicorn>=21.2",
  "python-dotenv>=1.0",
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["api", "api.*"]
exclude = ["frontend*", "ai_docs*", "logs*"]
